23/12/23

Full screen resizable canvas


22/12/23

Main engine
Tris
Tris rotation
Meshes made of Tris
Mesh rotation
Back-face culling