@@ -1,10 +1,17 @@
+//GLOBAL CONSTANTS
+const MOVESPEED = 0.5;
+const MOUSESPEED = 0.0005;
+
 //GLOBAL VARIABLES
 let canvas;
 let ctx;
+let prevMouseX = 0;
+let prevMouseY = 0;
 
 
 //OBJECTS
-let camera = {x: 0, y: 0, z: -10, fov: 100, p: 0, y: 0};
+let camera = {x: 0, y: 0, z: -30, fov: 60};
+let world = [];
 
 
 //CLASSES
@@ -12,18 +19,18 @@ class Tri
 {
   constructor(v1,v2,v3,col)
   {
-    this.a = v1;
-    this.b = v2;
-    this.c = v3;
+    this.points = [v1, v2, v3];
     this.color = col;
+    this.behind = false;
   }
 
   normal()
   {
-    let v1 = this.b.sub(this.a);
-    let v2 = this.c.sub(this.a);
+    let v1 = this.points[1].sub(this.points[0]);
+    let v2 = this.points[2].sub(this.points[0]);
 
     let n = v1.cross(v2);
+
     return n.normalize();
   }
 
@@ -32,10 +39,44 @@ class Tri
     let cam = new Vector3(camera.x,camera.y,camera.z);
 
     let n = this.normal();
-    let vc = cam.sub(this.a);
+    let vc = cam.sub(this.points[0]);
     let d = n.dot(vc);
 
+    if (vc.z >= -9) this.behind = true;
+    else this.behind = false;
+
     return d > 0;
+  }
+
+  rotate(ax,ay,center)
+  {
+    let x = ax * (180 / Math.PI);
+    let y = ay * (180 / Math.PI);
+
+    const cosX = Math.cos(x);
+    const sinX = Math.sin(x);
+    const cosY = Math.cos(y);
+    const sinY = Math.sin(y);
+
+    let nt = [];
+
+    this.points.forEach(p =>
+    {
+      //translate to center
+      let point = {x: p.x - center.x, y: p.y - center.y, z: p.z - center.z};
+
+      // Rotate around X-axis
+      const y1 = point.y * cosX - point.z * sinX;
+      const z1 = point.y * sinX + point.z * cosX;
+
+      // Rotate around Y-axis
+      const x2 = point.x * cosY + z1 * sinY;
+      const z2 = -point.x * sinY + z1 * cosY;
+
+      nt.push(new Vector3(x2 + center.x, y1 + center.y, z2 + center.z));
+    });
+
+    return new Tri(nt[0],nt[1],nt[2],this.color);
   }
 }
 
@@ -44,13 +85,14 @@ class Mesh
   constructor(tris)
   {
     this.tris = tris;
+    world.push(this);
   }
 
   draw()
   {
     this.tris.forEach(e=>
     {
-      if (!e.facing()) draw(e);
+      if (!e.facing() && !e.behind) draw(e);
     })
   }
 
@@ -59,24 +101,29 @@ class Mesh
     let rtris = [];
 
     //find center
-    let cx = 0;
-    let cy = 0;
-    let cz = 0;
+    let cx = camera.x;
+    let cy = camera.y;
+    let cz = camera.z;
+
+    /*
+
     this.tris.forEach(e=>
     {
-      cx += (e.a.x + e.b.x + e.c.x);
-      cy += (e.a.y + e.b.y + e.c.y);
-      cz += (e.a.z + e.b.z + e.c.z);
+      cx += (e.points[0].x + e.points[1].x + e.points[2].x);
+      cy += (e.points[0].y + e.points[1].y + e.points[2].y);
+      cz += (e.points[0].z + e.points[1].z + e.points[2].z);
     })
     cx = cx / (this.tris.length * 3);
     cy = cy / (this.tris.length * 3);
     cz = cz / (this.tris.length * 3);
 
+    */
+
     let center = {x: cx, y: cy, z: cz};
 
     this.tris.forEach(e=>
     {
-      rtris.push(rotate(e,ax,ay,center));
+      rtris.push(e.rotate(ax,ay,center));
     })
     this.tris = rtris;
   }
@@ -150,50 +197,18 @@ function init()
 function project(point)
 {
   let d = camera.z - point.z;
-  let s = camera.fov / d;
+  let s = canvas.width / (2 * Math.tan((camera.fov * Math.PI) / 360) * d);
   let nx = canvas.width / 2 - point.x * s;
   let ny = canvas.height / 2 + point.y * s;
 
   return {x: nx, y: ny};
 }
 
-//put this in Tri()
-function rotate(t,ax,ay,center)
-{
-  let x = ax * (180 / Math.PI);
-  let y = ay * (180 / Math.PI);
-
-  const cosX = Math.cos(x);
-  const sinX = Math.sin(x);
-  const cosY = Math.cos(y);
-  const sinY = Math.sin(y);
-
-  let nt = [];
-
-  Object.values(t).forEach(p =>
-  {
-    //translate to center
-    let point = {x: p.x - center.x, y: p.y - center.y, z: p.z - center.z};
-
-    // Rotate around X-axis
-    const y1 = point.y * cosX - point.z * sinX;
-    const z1 = point.y * sinX + point.z * cosX;
-
-    // Rotate around Y-axis
-    const x2 = point.x * cosY + z1 * sinY;
-    const z2 = -point.x * sinY + z1 * cosY;
-
-    nt.push(new Vector3(x2 + center.x, y1 + center.y, z2 + center.z));
-  });
-
-  return new Tri(nt[0],nt[1],nt[2],t.color);
-}
-
 function draw(t)
 {
-  let pa = project(t.a);
-  let pb = project(t.b);
-  let pc = project(t.c);
+  let pa = project(t.points[0]);
+  let pb = project(t.points[1]);
+  let pc = project(t.points[2]);
   
   ctx.strokeStyle = 'white';
   ctx.beginPath();
@@ -206,6 +221,20 @@ function draw(t)
   ctx.fill();
 }
 
+function mouseDir(e)
+{
+  let deltaX = e.clientX - prevMouseX;
+  let deltaY = e.clientY - prevMouseY;
+  let dir = {x: 0, y: 0};
+
+  console.log(deltaX,deltaY);
+
+  dir.x = deltaX > 0 ? 'right' : 'left';
+
+  dir.y = deltaY > 0 ? 'down' : 'up';
+
+  return dir;
+}
 
 // EVENT LISTENERS
 //resize canvas with window
@@ -215,6 +244,114 @@ window.addEventListener('resize', e=>
   canvas.height = window.innerHeight;
 })
 
+//fps kb movements
+window.addEventListener('keydown', e=>
+{
+  if (e.key == 'w') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.z -= MOVESPEED * 2;
+      })
+    })
+  })
+
+  if (e.key == 's') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.z += MOVESPEED * 2;
+      })
+    })
+  })
+
+  if (e.key == 'a') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.x += MOVESPEED;
+      })
+    })
+  })
+
+  if (e.key == 'd') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.x -= MOVESPEED;
+      })
+    })
+  })
+
+  if (e.key == 'q') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.y -= MOVESPEED;
+      })
+    })
+  })
+
+  if (e.key == 'e') world.forEach(f=>
+  {
+    f.tris.forEach(g=>
+    {
+      g.points.forEach(h=>
+      {
+        h.y += MOVESPEED;
+      })
+    })
+  })
+
+  if (e.key == 'ArrowUp') camera.fov--;
+
+  if (e.key == 'ArrowDown') camera.fov++;
+
+  if (e.key == 'ArrowLeft')
+  {
+    world.forEach(e=>
+    {
+      e.rotate(0,MOUSESPEED);
+    })
+  }
+
+  if (e.key == 'ArrowRight')
+  {
+    world.forEach(e=>
+    {
+      e.rotate(0,-MOUSESPEED);
+    })
+  }
+})
+
+//fps mouse movements
+window.addEventListener('mousemove', (e) =>
+{
+  ctx.clearRect(0,0, canvas.width, canvas.height)
+
+  let dir = mouseDir(e);
+
+  world.forEach(e=>
+  {
+    if (dir.x == 'left') e.rotate(0, MOUSESPEED);
+    if (dir.x == 'right') e.rotate(0, -MOUSESPEED);
+    //if (dir.y == 'up') e.rotate(MOUSESPEED, 0);
+    //if (dir.y == 'down') e.rotate(-MOUSESPEED, 0);
+  })
+
+    prevMouseX = e.clientX;
+    prevMouseY = e.clientY;
+});
 
 //RUNTIME
 
@@ -247,12 +384,14 @@ let cube = new Mesh([
   new Tri(new Vector3(10,10,10), new Vector3(10,10,0), new Vector3(10,0,10), 'blue'),
 ]);
 
+
 cube.draw();
+
 
 let update = ()=>
 {
   ctx.clearRect(0,0, canvas.width, canvas.height)
-  cube.rotate(0.0001,0.0001);
+  //cube.rotate(0.0001,0.0001);
 
   cube.draw();
 
