@@ -4,4 +4,5 @@ body, html
     padding: 0 !important;
     overflow: hidden;
     background-color: black;
+    cursor: none;
 }
