@@ -1,3 +1,14 @@
+30/12/23
+
+Sorta solved near clipping
+Added fps kb controls (WASD)
+Added fps mouse control (no mouse clamp)
+
+27/12/23
+
+Moved rotation function in Tri
+
+
 23/12/23
 
 Full screen resizable canvas
